fix(Fev 1278 ): If the playlist contains a live entry that is not broadcasting the currently not broadcasting tile will overlap the entire player (#357)
* fix(FEV-1278): upd dependencies

* fix(FEV-1278): live layout fix

* fix(FEV-1278): dev comments and attach media on reset

--- a/src/components/no-longer-live/no-longer-live.scss
+++ b/src/components/no-longer-live/no-longer-live.scss
@@ -1,6 +1,5 @@
 @import '../../variables.scss';
 .no-longer-live-wrapper {
-  z-index: 5; // overlap spinner and replay button
   position: absolute;
   top: 0;
   right: 0;
@@ -29,7 +28,10 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      background-image: url('./assets/no-longer-live-big.svg');
+      .no-longer-live-small-icon {
+        display: none;
+        margin: 0 auto;
+      }
     }
   }
   .text-wrapper {
@@ -47,34 +49,28 @@
   }
 }
 
-:global {
-  .playkit-player.playkit-size-sm,
-  .playkit-player.playkit-size-xs {
-    .kaltura-live__icon-wrapper {
-      max-width: 195px;
-      max-height: 280px;
-      .kaltura-live__no-longer-live-icon {
-        background-image: url('./assets/no-longer-live-small.svg');
-      }
+:global(.playkit-player.playkit-size-sm),
+:global(.playkit-player.playkit-size-xs) {
+  .icon-wrapper {
+    max-width: 195px;
+    max-height: 280px;
+    .no-longer-live-big-icon {
+      display: none;
     }
-    .kaltura-live__text-wrapper {
-      bottom: 52px;
+    .no-longer-live-small-icon {
+      display: block;
     }
   }
-  .playkit-player.playkit-size-xs {
-    .kaltura-live__no-longer-live-icon {
-      display: none;
-    }
-    .kaltura-live__text-wrapper {
-      bottom: 72px;
-    }
+  .text-wrapper {
+    bottom: 52px;
   }
-  .playkit-player.playkit-size-ty {
-    .kaltura-live__no-longer-live-icon {
-      display: none;
-    }
-    .kaltura-live__text-wrapper {
-      display: none;
-    }
+}
+
+:global(.playkit-player.playkit-size-ty) {
+  .icon-wrapper {
+    display: none;
+  }
+  .text-wrapper {
+    bottom: auto;
   }
 }
